--- a/style.css
+++ b/style.css
@@ -472,7 +472,12 @@ span.price span {position: relative;top: -11px;left: -2px; font-size: 14px;}
 .categoryList ul li.current a, .categoryList ul li a:hover {background: #b1b1b1;}
 
 .eventItem {position: relative;min-height: 341px;border-bottom: 1px solid #e5e5e5; padding-left: 552px;background: #fff;}
-.eventItemHeader {position: relative;min-height: 300px;border-bottom: 1px solid #e5e5e5; padding-left: 40px;background: #fff;}
+@media only screen and (max-width: 600px) {
+    .eventItemHeader {position: relative; min-height: 550px;border-bottom: 1px solid #e5e5e5; padding-left: 5px;background: #fff;}
+}
+@media only screen and (min-width: 600px) {
+    .eventItemHeader {position: relative; min-height: 300px;border-bottom: 1px solid #e5e5e5; padding-left: 40px;background: #fff;}
+}
 .eventItemImg {display: block;position: absolute;left: 0;top: 0;width: 502px;height: 342px;}
 .eventItemImg img {display: block;width: 100%;max-width: 100%;height: auto;}
 
